config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-anomaly
  labels:
    name: k8s-anomaly
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
